--- a/sections/main-collection-product-grid.liquid
+++ b/sections/main-collection-product-grid.liquid
@@ -1,7 +1,26 @@
+
 <section class="padding-x">
-	{% paginate collection.products by 2 %}
-	  <h2 class="mt-9 mb-6 md:mb-9 uppercase">{{ collection.title }}</h2>
-		{% render 'collection-grid', show_image: true %}
-		{% render 'pagination' %}
+	{% paginate collection.products by 12 %}
+    <div class="grid grid-cols-2 grid-flow-dense md:grid-cols-3 gap-x-gutter gap-y-6">
+      {% for product in collection.products %}
+        {%- render 'card-product', collection: collection, section: section, card_product: product -%}
+      {% endfor %}
+		</div>
+		{% render 'pagination', paginate: paginate %}
 	{% endpaginate %}
 </section>
+
+{% schema %}
+{
+  "name": "Collection Product Grid",
+  "class": "section-collection-product-grid",
+  "settings": [
+    {
+      "type": "link_list",
+      "id": "menu",
+      "default": "main-menu",
+      "label": "t:sections.header.settings.menu.label"
+    }
+  ]
+}
+{% endschema %}
