--- a/snippets/pagination.liquid
+++ b/snippets/pagination.liquid
@@ -11,28 +11,23 @@
     - anchor: {String} (optional) This can be added so that on page reload it takes you to wherever you've placed your anchor tag.
 {% endcomment %}
 
-<link rel="stylesheet" href="{{ 'component-pagination.css' | asset_url }}" media="print" onload="this.media='all'">
-<noscript>{{ 'component-pagination.css' | asset_url | stylesheet_tag }}</noscript>
-{{ pagination }}
 {%- if paginate.parts.size > 0 -%}
-  <div class="pagination-wrapper">
-    <nav class="pagination" role="navigation" aria-label="{{ 'general.pagination.label' | t }}">
-      <ul class="pagination__list list-unstyled" role="list">
-      {%- if paginate.previous -%}
-        <li>
-          <a href="{{ paginate.previous.url }}{{ anchor }}" class="pagination__item pagination__item--next pagination__item-arrow link motion-reduce" aria-label="{{ 'general.pagination.previous' | t }}">
-            {% render 'icon-caret' %}
+  <div class="mt-12">
+    <nav role="navigation" aria-label="{{ 'general.pagination.label' | t }}">
+      <ul role="list" class="flex items-center justify-center mx-auto space-x-3">
+        <li class="px-2">
+          <a role="link" {% if paginate.previous %} href="{{ paginate.previous.url }}{{ anchor }}" {% else %} style="visibility:hidden" aria-disabled="true"{% endif %} class="block rotate-180 link motion-reduce" aria-label="{{ 'general.pagination.previous' | t }}">
+            {% render 'icon-arrow' %}
           </a>
         </li>
-      {%- endif -%}
 
       {%- for part in paginate.parts -%}
         <li>
           {%- if part.is_link -%}
-            <a href="{{ part.url }}{{ anchor }}" class="pagination__item link" aria-label="{{ 'general.pagination.page' | t: number: part.title }}">{{ part.title }}</a>
+            <a href="{{ part.url }}{{ anchor }}" class="hover:underline opacity-40 link" aria-label="{{ 'general.pagination.page' | t: number: part.title }}">{{ part.title }}</a>
           {%- else -%}
             {%- if part.title == paginate.current_page -%}
-              <span class="pagination__item pagination__item--current" aria-current="page" aria-label="{{ 'general.pagination.page' | t: number: part.title }}">{{ part.title }}</span>
+              <span class="underline" aria-current="page" aria-label="{{ 'general.pagination.page' | t: number: part.title }}">{{ part.title }}</span>
             {%- else -%}
               <span class="pagination__item">{{ part.title }}</span>
             {%- endif -%}
@@ -40,13 +35,11 @@
         </li>
       {%- endfor -%}
 
-      {%- if paginate.next -%}
-        <li>
-          <a href="{{ paginate.next.url }}{{ anchor }}" class="pagination__item pagination__item--prev pagination__item-arrow link motion-reduce" aria-label="{{ 'general.pagination.next' | t }}" >
-            {%- render 'icon-caret' -%}
-          </a>
-        </li>
-      {%- endif -%}
+      <li class="px-2">
+        <a role="link" {% if paginate.next %} href="{{ paginate.next.url }}{{ anchor }}" {% else %} style="visibility:hidden" aria-disabled="true"{% endif %} class="pagination__item pagination__item--prev pagination__item-arrow link motion-reduce" aria-label="{{ 'general.pagination.next' | t }}" >
+          {%- render 'icon-arrow' -%}
+        </a>
+      </li>
       </ul>
     </nav>
   </div>
